# smallpopTE

./: CMakeLists.txt  README.md
includes/: editorFeatures.h  file.h  input.h  output.h  pch.h  row.h  shortcuts.h  stack.h  terminal.h  text.h
src/: CMakeLists.txt  datastructures.c  editorFeatures.c  error.c  main.c  row.c  shortcuts.c  terminal.c
src/data_structures/: stack.c
src/includes/: editorFeatures.h  error.h  pch.h  row.h  shortcuts.h  terminal.h
src/io/: file.c  input.c  output.c
tests/: CMakeLists.txt  featureTests.c
